# learn-opengl-cpp

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  lsan.supp
shaders/: triangle.frag  triangle.vert
src/: main.cpp  shader.cpp  shader.hpp
